--- a/src/components/Quote/Quote.module.css
+++ b/src/components/Quote/Quote.module.css
@@ -17,5 +17,5 @@
 }
 
 .quoteText {
-  font-size: clamp(1.25rem, 2vw, 3rem);
+  font-size: clamp(1.5rem, 2vw, 3rem);
 }
